# arxiv-parsing

./: .env.example  ARCHITECTURE.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
data/cache/arxiv/: 1706.03762_html.html  1706.03762_metadata.json  2207.04015_html.html  2207.04015_metadata.json
data/xml/: 2107.12364_grobid.xml  2111.09254_grobid.xml  2111.10853_grobid.xml  2112.11079_grobid.xml  2112.11666_grobid.xml  2201.13451_grobid.xml  2203.00837_grobid.xml  2206.02954_grobid.xml  2208.02807_grobid.xml  2210.04681_grobid.xml  2303.05981_grobid.xml  2305.04116_grobid.xml  2307.04034_grobid.xml  2308.05373_grobid.xml  2308.08672_grobid.xml  2309.00706_grobid.xml  2309.07261_grobid.xml  2309.10792_grobid.xml  2310.12757_grobid.xml  2312.12407_grobid.xml  2402.18921_grobid.xml  2403.15175_grobid.xml  2404.09119_grobid.xml  2404.17180_grobid.xml  2409.06399_grobid.xml  2409.10421_grobid.xml  2410.04996_grobid.xml  2410.11743_grobid.xml  2410.12117_grobid.xml  2411.14285_grobid.xml  2502.05715_grobid.xml  2504.13977_grobid.xml  2506.19025_grobid.xml  2507.00260_grobid.xml  2508.02404_grobid.xml  2508.08499_grobid.xml
src/config/: logging.py  settings.py
src/ingestion/: arxiv_fetcher.py
src/models/: paper.py  reference.py  schemas.py
src/parsers/: __init__.py  arxiv_html_parser.py  base_parser.py  grobid_client.py  orchestrator.py  pymupdf_parser.py
src/search/: arxiv_search_client.py  web_search_client.py
tests/: conftest.py  test_end_to_end_workflow.py
